--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/CHESS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.commons-lang3-3.3.2.jar=C:\\Users\\dmmcgee0\\Downloads\\commons-lang3-3.3.2\\commons-lang3-3.3.2\\commons-lang3-3.3.2.jar
-file.reference.commons-lang3-3.3.2.jar-1=C:\\Users\\dmmcgee0\\Downloads\\commons-lang3-3.3.2.jar
+file.reference.commons-lang3-3.3.2.jar=commons-lang3-3.3.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-lang3-3.3.2.jar}:\
-    ${file.reference.commons-lang3-3.3.2.jar-1}
+    ${file.reference.commons-lang3-3.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
